--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ show_image: true
 show_tags: true
 
 # Add your Google Analytics ID here if you have one and want to use it
-google_analytics: UA-174193910-1
+google_analytics: G-GE2NZRSZBN
 
 exclude:
   - docker-compose.yml
