--- a/_config.yml
+++ b/_config.yml
@@ -38,9 +38,9 @@ baseurl: "/wide-baseline-stereo-blog" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
 minima:
-  social_links:
-    twitter: ducha_aiki
-    github: ducha-aiki
+ social_links:
+    - { platform: github, user_url: "https://github.com/ducha-aiki/" }
+    - { platform: twitter, user_url: "https://twitter.com/ducha_aiki" }
 
 # Set this to true to get LaTeX math equation support
 use_math: true
